<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/menu_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="4dp"
        android:paddingBottom="4dp">
        <!--图片-->
        <LinearLayout
            android:id="@+id/view_photo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/chat_tool_photo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/chat_tool_photo"
                android:textColor="@color/black1"
                android:textSize="12sp" />
        </LinearLayout>
        <!--拍摄-->
        <LinearLayout
            android:id="@+id/view_camera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/chat_tool_camera" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/chat_tool_camera"
                android:textColor="@color/black1"
                android:textSize="12sp" />
        </LinearLayout>
        <!--位置-->
        <LinearLayout
            android:id="@+id/view_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/chat_tool_location" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/chat_tool_location"
                android:textColor="@color/black1"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="4dp"
        android:visibility="visible"
        android:gravity="center_vertical">
        <!--文件-->
        <LinearLayout
            android:id="@+id/view_file"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/chat_tool_send_file" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/chat_tool_file"
                android:textColor="@color/black1"
                android:textSize="12sp" />
        </LinearLayout>
        <!--语音电话-->
        <LinearLayout
            android:id="@+id/view_audio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/chat_tool_audio" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/chat_tool_audio"
                android:textColor="@color/black1"
                android:textSize="12sp" />
        </LinearLayout>
        <!--视频通话-->
        <LinearLayout
            android:id="@+id/view_video"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/chat_tool_video" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/chat_tool_video"
                android:textColor="@color/black1"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    </LinearLayout>
