<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:orientation="vertical">

    <!--底部导航栏-->
    <LinearLayout
        android:id="@+id/main_bottom"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <!--ChinaChat-->
        <RelativeLayout
            android:id="@+id/bottom_chinachat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="OnTabClicked"
            android:padding="3dp">

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center">

                <ImageView
                    android:id="@+id/img_chinachat"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:focusable="false"
                    android:scaleType="centerInside"
                    android:src="@drawable/tab_chinachat" />

                <TextView
                    android:id="@+id/txt_chinachat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img_chinachat"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="3dp"
                    android:gravity="center"
                    android:text="@string/msg_title"
                    android:textColor="#9A9A9A"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/unread_msg_number"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/aii"
                    android:gravity="center"
                    android:text="10"
                    android:textColor="@color/white"
                    android:textSize="8sp"
                    android:visibility="invisible" />
            </RelativeLayout>
        </RelativeLayout>

        <!--Friends-->
        <RelativeLayout
            android:id="@+id/bottom_friend"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="OnTabClicked"
            android:padding="3dp">

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center">

                <ImageView
                    android:id="@+id/img_friend"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_centerHorizontal="true"
                    android:focusable="false"
                    android:scaleType="centerInside"
                    android:src="@drawable/tab_friend" />

                <TextView
                    android:id="@+id/txt_friend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img_friend"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="3dp"
                    android:gravity="center"
                    android:text="@string/friend_title"
                    android:textColor="#9A9A9A"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/unread_friend_number"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/aii"
                    android:gravity="center"
                    android:text="10"
                    android:textColor="@color/white"
                    android:textSize="8sp"
                    android:visibility="invisible" />
            </RelativeLayout>
        </RelativeLayout>

        <!--Discover-->
        <RelativeLayout
            android:id="@+id/bottom_discover"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="OnTabClicked"
            android:padding="3dp">

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center">

                <ImageView
                    android:id="@+id/img_discover"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_centerHorizontal="true"
                    android:focusable="false"
                    android:scaleType="centerInside"
                    android:src="@drawable/tab_discover" />

                <TextView
                    android:id="@+id/txt_discover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img_discover"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="3dp"
                    android:gravity="center"
                    android:text="@string/find_title"
                    android:textColor="#9A9A9A"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/unread_discover_number"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="11dp"
                    android:background="@drawable/aii"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </RelativeLayout>
        </RelativeLayout>

        <!--profile-->
        <RelativeLayout
            android:id="@+id/bottom_profile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="OnTabClicked"
            android:padding="3dp">

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center">

                <ImageView
                    android:id="@+id/img_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_centerHorizontal="true"
                    android:focusable="false"
                    android:scaleType="centerInside"
                    android:src="@drawable/tab_profile" />

                <TextView
                    android:id="@+id/txt_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img_profile"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="3dp"
                    android:gravity="center"
                    android:text="@string/profile_title"
                    android:textColor="#9A9A9A"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/unread_profile_number"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="11dp"
                    android:background="@drawable/aii"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="12sp"

                    />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>