<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_chat">

    <!--顶部栏-->
    <include
        android:id="@+id/top_bar"
        layout="@layout/layout_title" />

    <!--底部栏-->
    <LinearLayout
        android:id="@+id/chat_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingTop="2dp"
        android:paddingBottom="2dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#B5B5B3" />

        <LinearLayout
            android:id="@+id/linear_chat_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#aaffffff"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="4dp">

            <Button
                android:id="@+id/btn_mode_voice"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="6dp"
                android:background="@drawable/btn_mode_voice"
                android:visibility="visible" />

            <Button android:id="@+id/btn_keyboard_mode"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="6dp"
                android:visibility="gone"
                android:background="@drawable/btn_mode_keyborad"
               />
            <LinearLayout
                android:id="@+id/btn_press_to_speak"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="6dp"
                android:visibility="gone"
                android:background="@drawable/linear_bg_voice">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_press_to_speak"
                    android:gravity="center"
                    android:textColor="#666666"
                    android:textSize="16sp"
                    />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/et_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:gravity="bottom"
                >
                <com.sky_wf.chinachat.chat.views.PaseteEditText
                    android:id="@+id/et_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="1dp"
                    android:maxLines="3"
                    android:minHeight="40dp"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:paddingLeft="1dp"
                    android:paddingRight="1dp"
                    android:textSize="18sp"/>

            </RelativeLayout>
            <ImageView
                android:id="@+id/iv_emotions_normal"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_centerVertical="true"
                android:layout_margin="1dp"
                android:layout_marginLeft="3dp"
                android:scaleType="fitCenter"
                android:src="@drawable/chatting_biaoqing_btn_normal"
                />
            <ImageView
                android:id="@+id/iv_emotions_enable"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_centerVertical="true"
                android:layout_margin="1dp"
                android:scaleType="fitCenter"
                android:src="@drawable/chatting_biaoqing_btn_enable"
                android:visibility="gone"
                />
            <Button
                android:id="@+id/btn_more"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/btn_type_select"
                />
            <Button
                android:id="@+id/btn_send"
                android:layout_width="70dp"
                android:layout_height="32dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/btn_bg_send"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:visibility="gone"
                android:text="@string/btn_send"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="vertical"
            android:paddingTop="5dp">

            <LinearLayout
                android:id="@+id/chat_face_container"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="vertical"
                android:visibility="gone">

                <android.support.v4.view.ViewPager
                    android:id="@+id/chat_vPager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/menu_bg"
                    android:paddingTop="10dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/chat_tools_container"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                android:visibility="gone">

                <include layout="@layout/layout_tools" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!--中间部分-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/chat_bottom_bar"
        android:layout_below="@+id/top_bar">

        <ProgressBar
            android:id="@+id/pg_load_more"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_centerHorizontal="true"
            android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/chat_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/pg_load_more"
            android:scrollbars="none" />

        <LinearLayout
            android:id="@+id/view_talk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/btn_bg_talk"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/img_chat_talk"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/voice_frame"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/recording_voice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="手指上滑，取消发送"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>